--- a/cassandra-tdg/.project
+++ b/cassandra-tdg/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>cassandra-tdg</name>
+	<name>cassandra-guide</name>
 	<comment></comment>
 	<projects>
 	</projects>
