--- a/cassandra-tdg/pom.xml
+++ b/cassandra-tdg/pom.xml
@@ -28,5 +28,25 @@
   		<artifactId>logback-classic</artifactId>
   		<version>1.1.3</version>
   	</dependency>
+  	<dependency>
+  		<groupId>com.datastax.spark</groupId>
+  		<artifactId>spark-cassandra-connector-java_2.10</artifactId>
+  		<version>1.5.0</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.apache.spark</groupId>
+  		<artifactId>spark-core_2.10</artifactId>
+  		<version>1.6.1</version>
+  	</dependency>
+	<dependency>
+		<groupId>org.apache.spark</groupId>
+		<artifactId>spark-sql_2.10</artifactId>
+		<version>1.5.2</version>
+	</dependency>
+	<dependency>
+		<groupId>org.apache.spark</groupId>
+		<artifactId>spark-streaming_2.10</artifactId>
+		<version>1.6.1</version>
+	</dependency>
   </dependencies>
 </project>
